--- a/package.json
+++ b/package.json
@@ -5,9 +5,28 @@
     "main": "dist/index.js",
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": {
+		"./package.json": "./package.json",
+		".": {
+			"import": {
+				"@elizaos/source": "./src/index.ts",
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			}
+		}
+	},
+    "files": [
+		"dist"
+	],
     "dependencies": {
-        "@elizaos/plugin-sgx": "workspace:*",
-        "@elizaos/plugin-tee": "workspace:*",
+		"@elizaos/core": "0.25.8",
+        "@elizaos/plugin-sgx": "0.1.9",
+        "@elizaos/plugin-tee": "0.1.9",
+		"typescript": "5.6.3",
+	    "zod": "3.24.1",
+		"sharp": "0.33.5",
+		"tsup": "8.3.5",
+        "undici": "7.3.0",
         "ethers": "^6.13.5"
     },
     "devDependencies": {
@@ -15,13 +34,43 @@
         "@types/node": "^20.0.0",
         "tsup": "8.3.5"
     },
-    "scripts": {
-        "build": "tsup --format esm --dts",
-        "dev": "tsup --format esm --dts --watch",
-        "clean": "rm -rf dist",
-        "lint": "biome lint .",
-        "lint:fix": "biome check --apply .",
-        "format": "biome format .",
-        "format:fix": "biome format --write ."
-    }
+	"scripts": {
+		"build": "tsup --format esm --dts",
+		"dev": "tsup --format esm --dts --watch",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"lint": "biome check src/",
+		"lint:fix": "biome check --apply src/",
+		"format": "biome format src/",
+		"format:fix": "biome format --write src/"
+	},
+    "agentConfig": {
+		"pluginType": "elizaos:plugin:1.0.0",
+		"pluginParameters": {
+			"EVM_PRIVATE_KEY": {
+				"type": "string",
+				"description": "Evm Private Key for sending the Attestation Report"
+			},
+            "DCAP_MODE": {
+				"type": "string",
+                "enum": [
+                    "OFF",
+                    "PLUGIN-SGX",
+                    "PLUGIN-TEE",
+                    "MOCK"
+                ],
+				"description": "DCAP Attestation Mode"
+			},
+            "TEE_MODE": {
+				"type": "string",
+                "enum": [
+                    "OFF",
+                    "LOCAL",
+                    "DOCKER",
+                    "PRODUCTION"
+                ],
+				"description": "Trusted Execution Environment mode"
+			}
+		}
+	}
 }
